// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowserUrlBar should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f2f4f6",
        "borderRadius": 999,
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
    testID="url-input"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        keyboardAppearance="light"
        keyboardType="web-search"
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Search by site or address"
        placeholderTextColor="#9fa6ae"
        returnKeyType="go"
        selectTextOnFocus={true}
        style={
          {
            "color": "#141618",
            "flex": 1,
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 44,
            "margin": 0,
            "paddingLeft": 16,
            "paddingVertical": 0,
          }
        }
        testID="browser-modal-url-input"
      />
    </View>
    <TouchableOpacity
      accessible={true}
      activeOpacity={1}
      disabled={false}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 8,
          "height": 28,
          "justifyContent": "center",
          "marginLeft": 4,
          "marginRight": 8,
          "opacity": 1,
          "width": 28,
        }
      }
      testID="url-clear-icon"
    >
      <SvgMock
        color="#6a737d"
        height={20}
        name="CircleX"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <TouchableOpacity
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      onPress={[Function]}
      style={
        {
          "justifyContent": "center",
          "marginRight": 16,
        }
      }
      testID="cancel-url-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#0376c9",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`BrowserUrlBar should render correctly when url bar is not focused 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 999,
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 16,
      }
    }
    testID="url-input"
  >
    <SvgMock
      color="#6a737d"
      height={16}
      name="Lock"
      style={
        {
          "height": 16,
          "marginRight": 8,
          "width": 16,
        }
      }
      width={16}
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        keyboardAppearance="light"
        keyboardType="web-search"
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Search by site or address"
        placeholderTextColor="#9fa6ae"
        returnKeyType="go"
        selectTextOnFocus={true}
        style={
          {
            "color": "#141618",
            "flex": 1,
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 44,
            "margin": 0,
            "paddingLeft": 0,
            "paddingVertical": 0,
          }
        }
        testID="browser-modal-url-input"
      />
    </View>
  </View>
  <View
    style={
      {
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 12,
          "marginLeft": 0,
          "marginRight": 16,
          "marginTop": 12,
        }
      }
      testID="navbar-account-button"
    >
      <TextInput
        style={
          {
            "height": 0,
            "paddingVertical": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "position": "relative",
          }
        }
        testID="badge-wrapper-badge"
      >
        <View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 16,
                "height": 32,
                "overflow": "hidden",
                "width": 32,
              }
            }
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": 0,
              "justifyContent": "center",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": -0,
                },
              ],
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": "50%",
                "justifyContent": "center",
                "maxHeight": 24,
                "minHeight": 8,
                "opacity": 0,
              }
            }
            testID="badgenetwork"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f2f4f6",
                  "borderColor": "#ffffff",
                  "borderRadius": 16,
                  "borderWidth": 2,
                  "height": 32,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "shadowColor": "#0000001A",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 4,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                  "width": 32,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#141618",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ?
              </Text>
            </View>
          </View>
        </View>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
